--- a/index.html
+++ b/index.html
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
 <html>
-    
-    <head>
-        <title>Projeto 01</title>
-        <link rel="stylesheet" href="css/global_styles.css" type="text/css" />
-        <meta charset="utf-8" />
-    </head>
+  <head>
+    <title>Projeto 01</title>
+    <link rel="stylesheet" href="css/global_styles.css" type="text/css" />
+    <meta charset="utf-8" />
+  </head>
 
-    <body>
-        <div class="header">
-            <div class="center">
-                <img src="images/logo.png" />
-            </div><!-- center -->
-        </div> <!-- hearder -->
+  <body>
+    <div class="header">
+      <div class="center">
+        <img src="images/logo.png" />
+      </div>
+      <!-- center -->
+    </div>
+    <!-- hearder -->
 
-        <div class="conatiner-banner">
-            <div class="center">
-                <div class="form">
-                    
-                </div>
+    <div class="conatiner-banner">
+      <div class="center">
+        <div class="form">
+          <h2>
+            Preencha o formulário e inicie a sua 
+            caminhada para virar um webmaster!
+          </h2>
+          <form action="">
+            <div class="input-container">
+              <span>Nome*</span>
+              <input type="text" name="nome" required />
             </div>
-        </div><!-- conatiner-banner -->
-    </body>
-
+            <div class="input-container">
+              <span>E-mail*</span>
+              <input type="text" name="email" required />
+            </div>
+            <div class="input-container">
+              <span>Telefone*</span>
+              <input type="text" name="telefone" required />
+            </div>
+            <p class="warning">*Campos obrigatórios!</p>
+            <div class="input-submit-container">
+              <input type="submit" name="acao" value="Enviar" />
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- conatiner-banner -->
+  </body>
 </html>
